--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,7 +15,8 @@
       <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>angularmaterial</span>
+      <img src="./assets/imagenes/LOGO PLAY.png" alt="logo">
+      <span>Sitio oficial de PlayStation®</span>
     </mat-toolbar>
     <ng-content></ng-content>
   </mat-sidenav-content>
