--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,3 +1,4 @@
 <div>
-    <img src="./assets/imagenes/jajajajaja.png" width="100%">
+    <img src="./assets/imagenes/banner yes or yes 2.png" width="100%">
 </div>
+
