--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,17 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
 .sidenav-container {
   height: 100%;
+  background-color: #F0F4FA;
 }
 
-.sidenav {
+.sidenav{
+  background-color: #F0F4FA;
+  font-family: 'PT Sans', sans-serif;
+  color: #1070c8;
   width: 200px;
 }
 
 .sidenav .mat-toolbar {
   background: inherit;
+  font-family: 'PT Sans', sans-serif;
+  color: #1070c8;
 }
 
 .mat-toolbar.mat-primary {
+  background-color: #F0F4FA;
   position: sticky;
   top: 0;
   z-index: 1;
+  font-family: 'PT Sans', sans-serif;
+  color: #1070c8;
+}
+
+
+img{
+  padding-right: 8px;
+  width: 40px;
+  height: 40px;
 }
