--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -1,2 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
+h1{
+    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-size: 35px;
+    color: black;
+}
 
