--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -1,4 +1,24 @@
 <div>
     <img src="./assets/imagenes/banner yes or yes 2.png" width="100%">
 </div>
-
+<br>
+<h1>Juegos del momento</h1>
+<mat-grid-list cols="4" rowHeight="1:1.5">
+    <mat-grid-tile *ngFor="let dest of destacados">
+        <mat-card class="example-card backgroundcard">
+            <mat-card-header>
+                <mat-card-title>{{dest.nombre}}</mat-card-title>
+            </mat-card-header>
+            <img mat-card-image [src]="dest.img" width="350px">
+            <mat-card-content>
+                <p class="infocards">
+                    ejemplo
+                </p>
+            </mat-card-content>
+            <mat-card-actions>
+                <button mat-button>Añadir al carrito</button>
+                <button mat-button>Más información</button>
+            </mat-card-actions>
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
