--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -1,9 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
+
 h1{
     text-align: center;
     font-family: 'PT Sans', sans-serif;
-    font-size: 35px;
+    font-size: 38px;
     color: black;
 }
-
+.example-card{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
+    background-color: white;
+    transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
+}
+.example-card:hover {
+    transform: scale(1.05);
+}
