--- a/src/app/componentes/productos/productos.component.html
+++ b/src/app/componentes/productos/productos.component.html
@@ -1,4 +1,22 @@
-<mat-card class="example-card">
+<mat-grid-list cols="3" rowHeight="1:1.5">
+    <mat-grid-tile *ngFor="let dest of filtros">
+        <mat-card class="example-card">
+           <!-- <img mat-card-image [src]="dest.img" width="320px"> -->
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
+
+
+
+
+
+
+
+
+
+
+
+<!-- <mat-card class="example-card">
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>Shiba Inu</mat-card-title>
@@ -17,3 +35,4 @@
         <button mat-button>SHARE</button>
     </mat-card-actions>
 </mat-card>
+-->
