--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,8 +2,8 @@
   <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === true">
     <mat-toolbar>Menu</mat-toolbar>
-    <mat-nav-list>
-      <a mat-list-item routerLink="inicio">Inicio</a>
+    <mat-nav-list class="lista">
+      <a mat-list-item routerLink="inicio" >Inicio</a>
       <a mat-list-item routerLink="productos">Productos</a>
       <a mat-list-item routerLink="servicios">Servicios</a>
       <a mat-list-item routerLink="acerca">Acerca De</a>
