--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -8,6 +8,7 @@
         <mat-card class="example-card">
             <mat-card-header style="background-color: black;">
                 <mat-card-title style="font-family: 'PT Sans', sans-serif; font-size: 20px; font-weight: bold;">{{dest.nombre}}</mat-card-title>
+                <mat-card-subtitle>{{dest.precio}}</mat-card-subtitle>
             </mat-card-header>
             <img mat-card-image [src]="dest.img" width="320px">
         </mat-card>
