--- a/src/app/componentes/productos/productos.component.html
+++ b/src/app/componentes/productos/productos.component.html
@@ -1,38 +1,38 @@
-<mat-grid-list cols="3" rowHeight="1:1.5">
-    <mat-grid-tile *ngFor="let dest of filtros">
-        <mat-card class="example-card">
-           <!-- <img mat-card-image [src]="dest.img" width="320px"> -->
-        </mat-card>
+<br>
+<h1>Productos</h1>
+
+<mat-grid-list cols="3" rowHeight="2:1">
+    <mat-grid-tile>
+        <div class="filtrito"><img src="./assets/imagenes/CONSOLAS (2).png" width="100%" class="fotofiltro"
+                (click)="mostrar1=!mostrar1"></div>
+    </mat-grid-tile>
+<!--
+    <mat-grid-tile>
+        <div class="filtrito"><img src="./assets/imagenes/ACCESORIOS PLAY.png" width="100%" class="fotofiltro"
+                (click)="mostrar2=!mostrar2"></div>
+    </mat-grid-tile>
+
+    <mat-grid-tile>
+        <div class="filtrito"><img src="./assets/imagenes/juegossss.avif" width="100%" class="fotofiltro"
+                (click)="mostrar3=!mostrar3"></div>
     </mat-grid-tile>
 </mat-grid-list>
-
-
-
-
-
-
-
-
-
-
-
-<!-- <mat-card class="example-card">
-    <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-        <p>
-            The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-            A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-            bred for hunting.
-        </p>
-    </mat-card-content>
-    <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SHARE</button>
-    </mat-card-actions>
-</mat-card>
 -->
+
+<mat-grid-list cols="3" rowHeight="1:1.5">
+    <div *ngIf="mostrar1">
+        <mat-grid-tile *ngFor="let cons of consolas">
+            <mat-card class="example-card">
+                <mat-card-header style="background-color: black;">
+                    <mat-card-title
+                        style="font-family: 'PT Sans', sans-serif; font-size: 20px; font-weight: bold;">{{cons.nombre}}</mat-card-title>
+                    <mat-card-subtitle>{{cons.precio}}</mat-card-subtitle>
+                </mat-card-header>
+                <img mat-card-image [src]="cons.img" width="320px">
+                <mat-card-content>
+
+                </mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
+    </div>
+</mat-grid-list>
