--- a/src/app/componentes/productos/productos.component.css
+++ b/src/app/componentes/productos/productos.component.css
@@ -14,3 +14,12 @@ h1{
 .filtrito:hover {
     transform: scale(1.05);
 }
+
+.example-card{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0);
+    background-color: black;
+    transition: transform 0.3s, box-shadow 0.3s, background-color 0.3s;
+}
+.example-card:hover {
+    transform: scale(1.05);
+}
