--- a/src/app/componentes/productos/productos.component.html
+++ b/src/app/componentes/productos/productos.component.html
@@ -6,7 +6,7 @@
         <div class="filtrito"><img src="./assets/imagenes/CONSOLAS (2).png" width="100%" class="fotofiltro"
                 (click)="mostrar1=!mostrar1"></div>
     </mat-grid-tile>
-<!--
+
     <mat-grid-tile>
         <div class="filtrito"><img src="./assets/imagenes/ACCESORIOS PLAY.png" width="100%" class="fotofiltro"
                 (click)="mostrar2=!mostrar2"></div>
@@ -17,22 +17,54 @@
                 (click)="mostrar3=!mostrar3"></div>
     </mat-grid-tile>
 </mat-grid-list>
--->
 
-<mat-grid-list cols="3" rowHeight="1:1.5">
-    <div *ngIf="mostrar1">
-        <mat-grid-tile *ngFor="let cons of consolas">
+<br>
+<div *ngIf="mostrar1">
+<mat-grid-list cols="3" rowHeight="2:2">
+    <mat-grid-tile *ngFor="let cons of consolas">
+        <mat-card class="example-card">
+            <mat-card-header style="background-color: black;">
+                <mat-card-title
+                    style="font-family: 'PT Sans', sans-serif; font-size: 20px; font-weight: bold;">{{cons.nombre}}</mat-card-title>
+                <mat-card-subtitle>{{cons.precio}}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image [src]="cons.img" width="360px">
+        </mat-card>
+    </mat-grid-tile>
+</mat-grid-list>
+</div>
+
+<br>
+<div *ngIf="mostrar2">
+<mat-grid-list cols="3" rowHeight="2:2">
+    <mat-grid-tile *ngFor="let acc of accesorios">
+        <mat-card class="example-card">
+            <mat-card-header style="background-color: black;">
+                <mat-card-title
+                    style="font-family: 'PT Sans', sans-serif; font-size: 20px; font-weight: bold;">{{acc.nombre}}</mat-card-title>
+                <mat-card-subtitle>{{acc.precio}}</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image [src]="acc.img" width="370px">
+
+        </mat-card>
+    </mat-grid-tile>
+
+</mat-grid-list>
+</div>
+
+<br>
+<div *ngIf="mostrar3">
+    <mat-grid-list cols="3" rowHeight="2:2">
+        <mat-grid-tile *ngFor="let jue of juegos">
             <mat-card class="example-card">
                 <mat-card-header style="background-color: black;">
                     <mat-card-title
-                        style="font-family: 'PT Sans', sans-serif; font-size: 20px; font-weight: bold;">{{cons.nombre}}</mat-card-title>
-                    <mat-card-subtitle>{{cons.precio}}</mat-card-subtitle>
+                        style="font-family: 'PT Sans', sans-serif; font-size: 20px; font-weight: bold;">{{jue.nombre}}</mat-card-title>
+                    <mat-card-subtitle>{{jue.precio}}</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image [src]="cons.img" width="320px">
-                <mat-card-content>
+                <img mat-card-image [src]="jue.img" width="370px">
 
-                </mat-card-content>
             </mat-card>
         </mat-grid-tile>
-    </div>
-</mat-grid-list>
+    </mat-grid-list>
+</div>
