--- a/src/app/componentes/servicios/servicios.component.html
+++ b/src/app/componentes/servicios/servicios.component.html
@@ -1,1 +1,28 @@
-<p>servicios works!</p>
+<table mat-table [dataSource]="consolasTabla" class="mat-elevation-z8">
+    <!-- Columna con las posiciones de los productos -->
+    <ng-container matColumnDef="numero">
+        <th mat-header-cell *matHeaderCellDef> Nº </th>
+        <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
+    </ng-container>
+
+    <!-- Columna que contiene los nombres -->
+    <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+    </ng-container>
+
+    <!-- Columna con los precios de los productos -->
+    <ng-container matColumnDef="precio">
+        <th mat-header-cell *matHeaderCellDef> Precio</th>
+        <td mat-cell *matCellDef="let element"> {{element.precio}} </td>
+    </ng-container>
+
+    <!-- Columna con las plataformas de los productos -->
+    <ng-container matColumnDef="plataforma">
+        <th mat-header-cell *matHeaderCellDef> Plataforma </th>
+        <td mat-cell *matCellDef="let element"> {{element.plataforma}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
